@@ -25,7 +25,9 @@ New checkers
 
   Closes #5895
 
-* Fixed failure to run deprecated checks with ``--enable=deprecated*`` after a ``disable=all``.
+* Fixed failure to run deprecated checks with ``--enable=deprecated-module`` after a ``disable=all``
+  by making ``ImportsChecker`` solely responsible for emitting ``deprecated-module`` instead
+  of sharing responsibility with ``StdlibChecker``. (This could have led to double messages.)
 
 * Add new check ``unnecessary-dunder-call`` for unnecessary dunder method calls.
 
