@@ -126,11 +126,7 @@ def test_exclusivity_of_msgids() -> None:
         ),
         "02": ("classes", "refactoring", "multiple_types"),
         "03": ("classes", "format"),
-        "04": (
-            "imports",
-            "spelling",
-            "stdlib",
-        ),  # stdlib is here because of DeprecatedMixin
+        "04": ("imports", "spelling"),
         "05": ("consider-using-any-or-all", "miscellaneous"),
         "07": ("exceptions", "broad_try_clause", "overlap-except"),
         "12": ("design", "logging"),
