@@ -23,7 +23,9 @@ Release date: TBA
 
   Closes #5224
 
-* Fixed failure to run deprecated checks with ``--enable=deprecated*`` after a ``disable=all``.
+* Fixed failure to run deprecated checks with ``--enable=deprecated-module`` after a ``disable=all``
+  by making ``ImportsChecker`` solely responsible for emitting ``deprecated-module`` instead
+  of sharing responsibility with ``StdlibChecker``. (This could have led to double messages.)
 
 * The ``config`` attribute of ``BaseChecker`` has been deprecated. You can use ``checker.linter.config``
   to access the global configuration object instead of a checker-specific object.
